cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
set(CMAKE_LEGACY_CYGWIN_WIN32 0)
option(OUROBOROS_USE_CLANG "use clang" ON)
if (OUROBOROS_USE_CLANG)
    set(CMAKE_CXX_COMPILER clang++)
    set(CMAKE_C_COMPILER clang)
endif (OUROBOROS_USE_CLANG)

project(ouroboros)

enable_testing()

find_package(Boost COMPONENTS system filesystem regex date_time signals unit_test_framework REQUIRED)
if (Boost_FOUND)
    add_definitions(-DOUROBOROS_BOOST_ENABLED)
    include_directories(${Boost_INCLUDE_DIRS})
endif (Boost_FOUND)

set(CMAKE_CXX_FLAGS "-Wall -Werror")
option(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_subdirectory(ouroboros)
option(OUROBOROS_EXAMPLES_ENABLED "the examples are enabled" ON)
if (OUROBOROS_EXAMPLES_ENABLED)
    add_subdirectory(examples)
endif (OUROBOROS_EXAMPLES_ENABLED)
option(OUROBOROS_TOOLS_ENABLED "the tools are enabled" ON)
if (OUROBOROS_TOOLS_ENABLED)
    add_subdirectory(tools)
endif (OUROBOROS_TOOLS_ENABLED)
option(OUROBOROS_TEST_ENABLED "the tests are enabled" ON)
if (Boost_FOUND AND OUROBOROS_TEST_ENABLED)
    add_subdirectory(tests)
endif (Boost_FOUND AND OUROBOROS_TEST_ENABLED)
